[gd_scene load_steps=20 format=3 uid="uid://o1mvo0x3g6o6"]

[ext_resource type="Texture2D" uid="uid://hqg8fbempbqm" path="res://assets/traps/falling_platforms/off.png" id="1_46nvg"]
[ext_resource type="Texture2D" uid="uid://dj6xdm1oab0vq" path="res://assets/traps/falling_platforms/on.png" id="1_d2tdm"]
[ext_resource type="Script" path="res://scenes/traps/falling_platform/falling_platform.gd" id="1_r2twt"]
[ext_resource type="Texture2D" uid="uid://psww8ymxixuo" path="res://assets/particles/dust.png" id="4_3f63m"]

[sub_resource type="Curve" id="Curve_ko0yl"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_sygxq"]
curve = SubResource("Curve_ko0yl")

[sub_resource type="Curve" id="Curve_8t4m0"]
_data = [Vector2(0.0103093, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.728261), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cfype"]
curve = SubResource("Curve_8t4m0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_41qoq"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(16, 1, 1)
direction = Vector3(0, -1, 0)
flatness = 1.0
gravity = Vector3(0, 139, 0)
scale_over_velocity_max = 1.0
scale_over_velocity_curve = SubResource("CurveTexture_cfype")
alpha_curve = SubResource("CurveTexture_sygxq")

[sub_resource type="AtlasTexture" id="AtlasTexture_6i0xu"]
atlas = ExtResource("1_46nvg")
region = Rect2(0, 0, 32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6i5f"]
atlas = ExtResource("1_d2tdm")
region = Rect2(0, 0, 32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g3ru"]
atlas = ExtResource("1_d2tdm")
region = Rect2(32, 0, 32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v0k0"]
atlas = ExtResource("1_d2tdm")
region = Rect2(64, 0, 32, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iv7p"]
atlas = ExtResource("1_d2tdm")
region = Rect2(96, 0, 32, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_jnoiw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i0xu")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6i5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g3ru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v0k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iv7p")
}],
"loop": true,
"name": &"on",
"speed": 20.0
}]

[sub_resource type="Animation" id="Animation_kap16"]
length = 0.001

[sub_resource type="Animation" id="Animation_rutxf"]
resource_name = "on"
length = 0.2
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c382b"]
_data = {
"RESET": SubResource("Animation_kap16"),
"on": SubResource("Animation_rutxf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6mfnn"]
size = Vector2(64, 10)

[node name="FallingPlatform" type="AnimatableBody2D"]
script = ExtResource("1_r2twt")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 12)
rotation = -3.14159
amount = 15
process_material = SubResource("ParticleProcessMaterial_41qoq")
texture = ExtResource("4_3f63m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_jnoiw")
animation = &"on"
autoplay = "on"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c382b")
}
autoplay = "on"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_6mfnn")
one_way_collision = true

[node name="StartingDelay" type="Timer" parent="."]
one_shot = true

[node name="FallingTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="FallingTimer" to="." method="_on_falling_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
